# ummie

./: .gitignore  pyproject.toml
src/ummie/: main.py
tests/: test_main.py
